# etwin

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .yarnrc  .yarnrc.yml  Cargo.toml  README.md  clippy.toml  etwin.toml.example  package.json  tsconfig.json  tsconfig.test.json
crates/cli/: Cargo.toml  README.md
crates/cli/src/: dinoparc.rs  lib.rs  main.rs  rest.rs
crates/cli/src/cmd/: dinoparc.rs  dump.rs  twinoid.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: lib.rs
crates/client/src/http/: mod.rs  url.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs
crates/constants/: Cargo.toml  README.md
crates/constants/src/: dinoparc.rs  hammerfest.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: api.rs  auth.rs  clock.rs  core.rs  dinoparc.rs  dinorpg.rs  dns.rs  email.rs  forum.rs  hammerfest.rs  lib.rs  link.rs  oauth.rs  password.rs  pg_num.rs  popotamo.rs  serde_buffer.rs  temporal.rs  token.rs  twinoid.rs  types.rs  user.rs  uuid.rs
crates/core/src/services/: hammerfest.rs
crates/core/tests/: hammerfest.rs
crates/db_schema/: Cargo.toml  README.md  scripts
crates/db_schema/src/: lib.rs  main.rs  schema.rs
crates/dinoparc_client/: Cargo.toml  README.md
crates/dinoparc_client/src/: http.rs  mem.rs
crates/dinoparc_client/src/http/: errors.rs  locale.rs  scraper.rs  url.rs
crates/dinoparc_store/: Cargo.toml  README.md
crates/dinoparc_store/src/: lib.rs  mem.rs  pg.rs  test.rs
crates/email_formatter/: Cargo.toml  README.md
crates/email_formatter/src/: html.rs  json.rs
crates/etwin_core/: Cargo.toml
crates/etwin_core/src/: async_fn.rs  auth.rs  clock.rs  core.rs  dinoparc.rs  email.rs  hammerfest.rs  lib.rs  link.rs  user.rs  uuid.rs
crates/etwin_core/tests/: hammerfest.rs
crates/etwin_dinoparc_store/: Cargo.toml
crates/etwin_dinoparc_store/src/: lib.rs  test.rs
crates/etwin_link_store/: Cargo.toml
crates/etwin_link_store/src/: pg.rs  test.rs
crates/etwin_squirrel/: Cargo.toml
crates/etwin_squirrel/src/: lib.rs
crates/etwin_user_store/: .env  Cargo.toml  sqlx-data.json
crates/etwin_user_store/src/: lib.rs  main.rs  memory.rs  pg.rs  postgres.rs  test.rs
crates/forum_store/: Cargo.toml  README.md
crates/forum_store/src/: pg.rs
crates/hammerfest_client/: Cargo.toml  README.md
crates/hammerfest_client/src/: http.rs  lib.rs  mem.rs  memory.rs
crates/hammerfest_client/src/http/: errors.rs  scraper.rs  tests.rs  url.rs
crates/hammerfest_client/src/http/scraper/: texts.rs  utils.rs
crates/hammerfest_client/test-resources/scraping/forum-home/: fr-user127.html  fr-user176431.html
crates/hammerfest_client/test-resources/scraping/forum-theme/: en-theme3-p89-user205769.html  es-theme2-p1-user273549.html
crates/hammerfest_client/test-resources/scraping/forum-thread/: fr-thread486800-p9.html  fr-thread487821-p1.html
crates/hammerfest_client/test-resources/scraping/godchildren/: fr-user997002.html
crates/hammerfest_client/test-resources/scraping/home/fr-user127/: input.html
crates/hammerfest_client/test-resources/scraping/inventory/: en-user209170-00-one-coin.html  en-user209170-01-coin-and-crystals.html  fr-user1041317.html
crates/hammerfest_client/test-resources/scraping/login/en-guest-default/: expected.json  options.json
crates/hammerfest_client/test-resources/scraping/login/es-guest-default/: input.html
crates/hammerfest_client/test-resources/scraping/login/es-guest-error/: options.json
crates/hammerfest_client/test-resources/scraping/login/es-user273549-default/: input.html
crates/hammerfest_client/test-resources/scraping/login/fr-guest-error/: expected.json  input.html
crates/hammerfest_client/test-resources/scraping/profile/en-user180098-guest/: input.html
crates/hammerfest_client/test-resources/scraping/profile/en-user180098-user205769/: expected.json  options.json
crates/hammerfest_client/test-resources/scraping/profile/en-user183556-user205769/: expected.json  input.html
crates/hammerfest_client/test-resources/scraping/profile/en-user205769-user205769/: options.json
crates/hammerfest_client/test-resources/scraping/profile/en-user209170-01-shift-at-lvl-0/: input.html
crates/hammerfest_client/test-resources/scraping/profile/en-user209170-02-die-at-lvl-0/: input.html  options.json
crates/hammerfest_client/test-resources/scraping/profile/en-user209170-03-coin-and-die-at-lvl-0/: expected.json  input.html
crates/hammerfest_client/test-resources/scraping/profile/en-user209170-04-die-at-lvl-1/: expected.json  input.html
crates/hammerfest_client/test-resources/scraping/profile/en-user84400-user265769/: expected.json
crates/hammerfest_client/test-resources/scraping/result/: en-run2361174-00-shift-at-lvl-0.html  en-run2361179-02-first-crystals.html
crates/hammerfest_client/test-resources/scraping/shop/: fr-user997002.html
crates/hammerfest_store/: Cargo.toml  README.md
crates/hammerfest_store/src/: db_tools.rs  lib.rs  mem.rs  pg.rs  test.rs
crates/link_store/: Cargo.toml  README.md
crates/link_store/src/: mem.rs  pg.rs  test.rs
crates/log/: Cargo.toml  README.md
crates/log/src/: lib.rs
crates/mailer/: Cargo.toml  README.md
crates/mailer/src/: lib.rs  mem.rs  smtp.rs
crates/mt_dns/: Cargo.toml  README.md
crates/mt_dns/src/: dead.rs  lib.rs  live.rs
crates/password/: Cargo.toml  README.md
crates/password/src/: lib.rs  scrypt.rs  test.rs
crates/populate/: Cargo.toml  README.md
crates/populate/src/: dinoparc.rs  hammerfest.rs  lib.rs
crates/postgres_tools/: Cargo.toml  README.md
crates/postgres_tools/src/: lib.rs
crates/rest/: Cargo.toml  README.md
crates/rest/src/: lib.rs
crates/scraper_tools/: Cargo.toml  README.md
crates/scraper_tools/src/: lib.rs
crates/scratch/: Cargo.toml
crates/scratch/src/: main.rs
crates/serde_tools/: Cargo.toml  README.md
crates/serde_tools/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: dns.rs  docs.rs  lib.rs  main.rs  publish.rs  sqlx.rs
xtask/src/metagen/: core.rs  etwin.rs  mod.rs
xtask/src/metagen/backend/: kotlin.rs  mod.rs  php.rs
(+795 files in other folders)
