[package]
edition = "2018"
name = "xtask"
version = "0.0.1"
authors = []
publish = false
license = "AGPL-3.0-or-later"

[lib]
doctest = false

[dependencies]
clap = "3.0.0-beta.2"
html5ever = "^0.25.1"
pulldown-cmark = "^0.8.0"
regex = "^1.4.2"
serde_json = "^1.0.60"
toml = "^0.5.8"
url = "^2.2.0"
walkdir = "^2.3.1"
#anyhow = "1.0.26"
#flate2 = "1.0"
#pico-args = "0.3.1"
#proc-macro2 = "1.0.8"
#quote = "1.0.2"
#ungrammar = "1.1.3"
#write-json =  "0.1.0"
#xshell = "0.1"
