[package]
edition = "2018"
name = "xtask"
version = "0.0.1"
authors = []
publish = false
license = "AGPL-3.0-or-later"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.41"
clap = "3.0.0-beta.2"
fs_extra = "1.2.0"
html5ever = "0.25.1"
pulldown-cmark = "0.8.0"
regex = "1.4.5"
serde_json = "1.0.64"
toml = "0.5.8"
url = "2.2.1"
walkdir = "2.3.2"
