[package]
edition = "2021"
name = "xtask"
version = "0.9.2"
authors = []
publish = false
license = "AGPL-3.0-or-later"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.4"
fs_extra = "1.2.0"
html5ever = "0.25.1"
pulldown-cmark = "0.8.0"
regex = "1.5.4"
serde_json = "1.0.68"
toml = "0.5.8"
url = "2.2.2"
walkdir = "2.3.2"
