[package]
name = "etwin_cli"
version = "0.7.2"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "DinoparcClient implementations"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
console = "0.14.1"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
dialoguer = "0.8.0"
etwin_core = { version = "0.7.2" }
etwin_dinoparc_client = { version = "0.7.2", features = ["http"] }
etwin_dinoparc_store = { version = "0.7.2" }
etwin_hammerfest_client = { version = "0.7.2" }
etwin_hammerfest_store = { version = "0.7.2" }
etwin_link_store = { version = "0.7.2" }
etwin_log = { version = "0.7.2" }
etwin_user_store = { version = "0.7.2" }
etwin_rest = { version = "0.7.2" }
etwin_services = { version = "0.7.2" }
tokio = { version = "1.4.0", features = ["full"] }
warp = "0.3.1"
