[package]
name = "etwin_cli"
version = "0.9.2"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "DinoparcClient implementations"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
console = "0.14.1"
chrono = "0.4.19"
clap = "3.0.0-beta.4"
dialoguer = "0.8.0"
etwin_config = "0.9.2"
etwin_core = "0.9.2"
etwin_dinoparc_client = { version = "0.9.2", features = ["http"] }
etwin_dinoparc_store = "0.9.2"
etwin_hammerfest_client = "0.9.2"
etwin_hammerfest_store = "0.9.2"
etwin_link_store = "0.9.2"
etwin_log = "0.9.2"
etwin_user_store = "0.9.2"
etwin_rest = "0.9.2"
etwin_services = "0.9.2"
etwin_twinoid_client = "0.9.2"
tokio = { version = "1.12.0", features = ["full"] }
warp = "0.3.1"
