[package]
name = "etwin_client"
version = "0.9.2"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Eternaltwin client implementations"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2021"

[features]
default = ["http", "mem"]
http = ["etwin_scraper_tools", "etwin_serde_tools", "reqwest", "scraper", "serde"]
mem = []

[dependencies]
async-trait = "0.1.51"
auto_impl = "0.4.1"
chrono = "0.4.19"
etwin_core = { version = "0.9.2", features = ["_serde"] }
etwin_constants = "0.9.2"
etwin_log = "0.9.2"
etwin_scraper_tools = { version = "0.9.2", optional = true }
etwin_serde_tools = { version = "0.9.2", optional = true, features = ["serde-http"] }
itertools = "0.10.1"
hex = "0.4.3"
neon = { version = "0.9.1", optional = true, default-features = false, features = ["napi-6"] }
once_cell = "1.8.0"
percent-encoding = "2.1.0"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.6", optional = true, default-features = false, features = ["cookies", "json", "rustls-tls"] }
scraper = { version = "0.12.0", optional = true }
serde = { version = "1.0.130", optional = true, features = ["derive"] }
serde_json = "1.0.68"
sha2 = "0.9.8"
thiserror = "1.0.30"
url = "2.2.2"
erased-serde = "0.3.16"

[dev-dependencies]
etwin_core = { version = "0.9.2", features = ["_serde"] }
serde = { version = "1.0.130", features = ["derive"] }
test-generator = "0.3.0"
