[package]
name = "etwin_constants"
version = "0.9.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Hammerfest store implementation"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
etwin_core = "0.9.1"
once_cell = "1.8.0"
