[package]
name = "etwin_core"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Core crate for Eternal-Twin"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "^0.1.42"
auto_impl = "^0.4.1"
chrono = "^0.4.19"
enum-iterator = "^0.6.0"
etwin_serde_tools = { path = "../serde_tools", optional = true }
itoa = "^0.4.7"
thiserror = { version = "^1.0.23" }
neon = { version = "^0.7.0", optional = true, default-features = false, features = ["napi-runtime"] }
once_cell = "^1.5.2"
regex = "^1.4.3"
serde = { version = "^1.0.123", optional = true, features = ["derive"] }
sqlx = { version = "^0.5.0", optional = true, default-features = false, features = ["macros", "chrono", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }
uuid = { version = "^0.8.2", default-features = false, features = ["serde", "v4"] }

[features]
_serde = ["etwin_serde_tools", "serde", "chrono/serde"]

[dev-dependencies]
hex = { version = "^0.4.2"}
serde_json = "^1.0.61"