[package]
name = "etwin_core"
version = "0.9.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Core crate for Eternal-Twin"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "0.1.51"
auto_impl = "0.4.1"
chrono = "0.4.19"
enum-iterator = "0.7.0"
etwin_serde_tools = { version = "0.9.1", optional = true, features = ["chrono"] }
itoa = "0.4.8"
thiserror = "1.0.29"
neon = { version = "0.9.1", optional = true, default-features = false, features = ["napi-6"] }
once_cell = "1.8.0"
regex = "1.5.4"
serde = { version = "1.0.130", optional = true, features = ["derive"] }
sqlx = { version = "0.5.7", optional = true, default-features = false, features = ["macros", "chrono", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }
url = "2.2.2"
uuid = { version = "0.8.2", default-features = false, features = ["serde", "v4"] }

[features]
_serde = ["etwin_serde_tools", "serde", "chrono/serde", "url/serde"]

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.67"
