[package]
name = "etwin_db_schema"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Manager for Eternal-Twin SQL schemas"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
etwin_config = { version = "0.1.0" }
etwin_squirrel = { version = "0.1.0" }
include_dir = "0.6.0"
lazy_static = "1.4.0"
sqlx = { version = "0.5.1", default-features = false, features = ["offline", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.4.0", features = ["macros"] }
