[package]
name = "etwin_db_schema"
version = "0.9.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Manager for Eternal-Twin SQL schemas"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
etwin_config = "0.9.1"
etwin_squirrel = "0.9.1"
include_dir = "0.6.2"
lazy_static = "1.4.0"
sqlx = { version = "0.5.7", default-features = false, features = ["offline", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.11.0", features = ["macros"] }
