[package]
name = "etwin_dinoparc_client"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "DinoparcClient implementations"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[features]
default = ["http", "mem"]
http = ["etwin_scraper_tools", "reqwest", "scraper", "serde"]
mem = []

[dependencies]
async-trait = "^0.1.42"
chrono = "^0.4.19"
etwin_core = { path = "../core" }
etwin_scraper_tools = { path = "../scraper_tools", optional = true }
md-5 = "^0.9.1"
neon = { version = "^0.7.0", optional = true, default-features = false, features = ["napi-runtime"] }
once_cell = "^1.5.2"
percent-encoding = "^2.1.0"
rand = "^0.8.3"
regex = "^1.4.3"
reqwest = { version = "^0.11.0", optional = true, features = ["cookies"] }
scraper = { version = "^0.12.0", optional = true }
serde = { version = "^1.0.123", optional = true, features = ["derive"] }
serde_json = "^1.0.61"
sha2 = "^0.9.3"
thiserror = "^1.0.23"

[dev-dependencies]
etwin_core = { path = "../core", features = ["serde"] }
serde = { version = "^1.0.123", features = ["derive"] }
test-generator = "0.3.0"
