[package]
name = "etwin_dinoparc_client"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "DinoparcClient implementations"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[features]
default = ["http", "mem"]
http = ["etwin_scraper_tools", "reqwest", "scraper", "serde"]
mem = []

[dependencies]
async-trait = "0.1.48"
chrono = "0.4.19"
etwin_core = { version = "0.1.0" }
etwin_constants = { version = "0.1.0" }
etwin_scraper_tools = { version = "0.1.0", optional = true }
itertools = "0.10.1"
md-5 = "0.9.1"
neon = { version = "0.8.0", optional = true, default-features = false, features = ["napi-runtime"] }
once_cell = "1.7.2"
percent-encoding = "2.1.0"
rand = "0.8.3"
regex = "1.4.5"
reqwest = { version = "0.11.2", optional = true, features = ["cookies"] }
scraper = { version = "0.12.0", optional = true }
serde = { version = "1.0.125", optional = true, features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.3"
thiserror = "1.0.24"
url = "2.2.2"

[dev-dependencies]
etwin_core = { version = "0.1.0", features = ["_serde"] }
serde = { version = "1.0.125", features = ["derive"] }
test-generator = "0.3.0"
