[package]
name = "etwin_core"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Core crate for Eternal-Twin"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "^0.1.42"
chrono = "^0.4.19"
once_cell = "^1.5.2"
regex = "^1.4.2"
uuid = { version = "^0.8.1", default-features = false, features = ["serde", "v4"] }
