[package]
name = "etwin_core"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Core crate for Eternal-Twin"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "^0.1.42"
chrono = { version = "^0.4.19", features = ["serde"] }
neon = { version = "^0.6.0", default-features = false, features = ["legacy-runtime"], optional = true }
once_cell = "^1.5.2"
regex = "^1.4.2"
serde = { version = "^1.0.115", optional = true, features = ["derive"] }
uuid = { version = "^0.8.1", default-features = false, features = ["serde", "v4"] }
