[package]
name = "etwin_core"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Core crate for Eternal-Twin"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "^0.1.42"
chrono = { version = "^0.4.19", features = ["serde"] }
thiserror = { version = "^1.0.0" }
neon = { version = "^0.6.0", default-features = false, features = ["legacy-runtime"], optional = true }
once_cell = "^1.5.2"
regex = "^1.4.2"
serde = { version = "^1.0.115", optional = true, features = ["derive"] }
sqlx = { version = "^0.4.1", optional = true, default-features = false, features = ["macros", "chrono", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }
uuid = { version = "^0.8.1", default-features = false, features = ["serde", "v4"] }

[dev-dependencies]
etwin_db_schema = { path = "../etwin_db_schema" }
etwin_link_store = { path = "../etwin_link_store" }
etwin_hammerfest_store = { path = "../etwin_hammerfest_store" }
etwin_user_store = { path = "../etwin_user_store" }
hammerfest_client = { path = "../hammerfest_client" }
serial_test = "^0.5.1"
sqlx = { version = "^0.4.1", default-features = false, features = ["macros", "chrono", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "^0.2.23", features = ["macros", "rt-core"] }
