[package]
name = "etwin_squirrel"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Manager for SQL schemas"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
include_dir = "^0.6.0"
once_cell = "^1.5.2"
petgraph = "^0.5.1"
regex = "^1.4.2"
serde = { version = "^1.0.118", default-features = false, features = ["derive"] }
serde_json = { version = "^1.0.60" }
sqlx = { version = "^0.4.1", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "^0.2.23" }
