[package]
name = "etwin_user_store"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Simple user service for Postgres (Rust)"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "^0.1.42"
chrono = "^0.4.19"
etwin_core = { path = "../etwin_core" }
etwin_db_schema = { path = "../etwin_db_schema" }
regex = "^1.4.2"
sqlx = { version = "^0.4.1", default-features = false, features = ["macros", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "^0.2.23", features = ["macros"] }
uuid = { version = "^0.8.1", default-features = false, features = ["serde", "v4"] }
warp = "^0.2.5"
