[package]
name = "etwin_hammerfest_client"
version = "0.0.1"
authors = ["Moulins <arthur.heuillard@orange.fr>"]
description = "HammerfestClient implementations"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[features]
default = ["http", "mem"]
http = ["etwin_scraper_tools", "reqwest", "scraper", "serde"]
mem = []

[dependencies]
async-trait = "0.1.48"
chrono = "0.4.19"
etwin_constants = { path = "../constants" }
etwin_core = { path = "../core" }
etwin_scraper_tools = { path = "../scraper_tools", optional = true }
neon = { version = "0.8.0", optional = true, default-features = false, features = ["napi-runtime"] }
rand = "0.8.3"
reqwest = { version = "0.11.2", optional = true, features = ["cookies"] }
scraper = { version = "0.12.0", optional = true }
serde = { version = "1.0.125", optional = true, features = ["derive"] }
thiserror = "1.0.24"
once_cell = "1.7.2"

[dev-dependencies]
etwin_core = { path = "../core", features = ["_serde"] }
serde_json = "1.0.64"
