[package]
name = "etwin_hammerfest_client"
version = "0.8.0"
authors = ["Moulins <arthur.heuillard@orange.fr>"]
description = "HammerfestClient implementations"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[features]
default = ["http", "mem"]
http = ["etwin_scraper_tools", "reqwest", "scraper", "serde"]
mem = []

[dependencies]
async-trait = "0.1.50"
chrono = "0.4.19"
etwin_constants = "0.8.0"
etwin_core = "0.8.0"
etwin_scraper_tools = { version = "0.8.0", optional = true }
neon = { version = "0.8.3", optional = true, default-features = false, features = ["napi-6"] }
itertools = "0.10.1"
rand = "0.8.4"
reqwest = { version = "0.11.4", optional = true, features = ["cookies"] }
scraper = { version = "0.12.0", optional = true }
serde = { version = "1.0.126", optional = true, features = ["derive"] }
thiserror = "1.0.26"
once_cell = "1.8.0"

[dev-dependencies]
etwin_core = { version = "0.8.0", features = ["_serde"] }
serde_json = "1.0.64"
