[package]
name = "etwin_hammerfest_store"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Hammerfest store implementation"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "^0.1.42"
etwin_core = { path = "../core", features = ["_serde", "sqlx"] }
etwin_db_schema = { path = "../db_schema" }
etwin_populate = { path = "../populate" }
etwin_postgres_tools = { path = "../postgres_tools" }
sha3 = "^0.9.1"
neon = { version = "^0.7.0", optional = true, default-features = false, features = ["napi-runtime"] }
regex = "^1.4.3"
serde_json = "^1.0.61"
sqlx = { version = "^0.5.1", default-features = false, features = ["macros", "chrono", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }

[dev-dependencies]
chrono = "^0.4.19"
etwin_config = { path = "../config" }
serial_test = "^0.5.1"
tokio = { version = "^1.1.1", features = ["macros", "rt"] }
