[package]
name = "etwin_hammerfest_store"
version = "0.7.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Hammerfest store implementation"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "0.1.48"
etwin_core = { version = "0.7.0", features = ["_serde", "sqlx"] }
etwin_db_schema = { version = "0.7.0" }
etwin_populate = { version = "0.7.0" }
etwin_postgres_tools = { version = "0.7.0" }
neon = { version = "0.8.0", optional = true, default-features = false, features = ["napi-runtime"] }
regex = "1.4.5"
serde_json = "1.0.64"
sha3 = "0.9.1"
sqlx = { version = "0.5.1", default-features = false, features = ["macros", "chrono", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }

[dev-dependencies]
chrono = "0.4.19"
etwin_config = { version = "0.7.0" }
serial_test = "0.5.1"
tokio = { version = "1.4.0", features = ["macros", "rt"] }
