[package]
name = "etwin_link_store"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Link store implementation"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "0.1.48"
etwin_core = { path = "../core", features = ["sqlx"] }
etwin_db_schema = { path = "../db_schema" }
neon = { version = "0.8.0", optional = true, default-features = false, features = ["napi-runtime"] }
regex = "1.4.5"
sqlx = { version = "0.5.1", default-features = false, features = ["macros", "chrono", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }

[dev-dependencies]
chrono = "0.4.19"
etwin_config = { path = "../config" }
etwin_dinoparc_store = { path = "../dinoparc_store" }
etwin_hammerfest_store = { path = "../hammerfest_store" }
etwin_user_store = { path = "../user_store" }
serial_test = "0.5.1"
tokio = { version = "1.4.0", features = ["macros", "rt"] }
