[package]
name = "etwin_link_store"
version = "0.7.2"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Link store implementation"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "0.1.48"
etwin_core = { version = "0.7.2", features = ["sqlx"] }
etwin_db_schema = { version = "0.7.2" }
neon = { version = "0.8.0", optional = true, default-features = false, features = ["napi-runtime"] }
regex = "1.4.5"
sqlx = { version = "0.5.1", default-features = false, features = ["macros", "chrono", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }

[dev-dependencies]
chrono = "0.4.19"
etwin_config = { version = "0.7.2" }
etwin_dinoparc_store = { version = "0.7.2" }
etwin_hammerfest_store = { version = "0.7.2" }
etwin_user_store = { version = "0.7.2" }
serial_test = "0.5.1"
tokio = { version = "1.4.0", features = ["macros", "rt"] }
